# minigame_shots-

./: CMakeLists.txt  client.cpp  client.h  main_client.cpp  main_server.cpp  server.cpp  server.h
client_side/: client.cpp  client.h  main_client.cpp  player.cpp  player.h
server_side/: main_server.cpp  server.cpp  server.h  session.cpp  session.h
